Fixed : searchbox alignment - Added : Simple audio player

--- a/css/template.css
+++ b/css/template.css
@@ -72,6 +72,7 @@ div.appName {
 
 form.icon {
 	border:none;
+	vertical-align:top;
 }
 
 a.icon:hover {
